package pers.caijx.adapter.objectadapter;

/**
 * @ClassName IVoltage5V
 * @Description: 适配器接口
 * @Author JunXiangCai
 * @Date 2019/10/24
 * @Version V1.0
 **/
public interface IVoltage5V {

    /**
     * 输出5V电压
     * @return 电压伏特
     */
    int output5V();
}
